troubleshooting/kubernetes/netshoot.yaml
apiVersion: v1
metadata:
  name: netshoot
kind: Pod
spec:
  containers:
  - name: netshoot
    image: nicolaka/netshoot
    command: ["sleep"]
    args: ["3600"]
    imagePullPolicy: Always
    securityContext:
      capabilities:
        add: ["NET_BIND_SERVICE"]
